# wren

./: .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
.zed/: settings.json
doc/site/: performance.markdown  values.markdown
doc/site/embedding/: calling-c-from-wren.markdown  calling-wren-from-c.markdown  slots-and-handles.markdown
doc/site/modules/core/: num.markdown  sequence.markdown
src/include/: wren.h
src/optional/: wren_opt_meta.c  wren_opt_random.c
src/vm/: wren_common.h  wren_compiler.c  wren_core.c  wren_debug.c  wren_lexer.c  wren_lexer.h  wren_math.h  wren_opcodes.h  wren_primitive.c  wren_primitive.h  wren_value.c  wren_value.h  wren_vm.c  wren_vm.h
test/: test.c
test/api/: benchmark.c  call.c  call_calls_foreign.c  foreign_class.c  lists.c  maps.c  new_vm.c  reset_stack_after_call_abort.c  reset_stack_after_foreign_construct.c  slots.c
test/api/num_float32/: call.wren  foreign_class.wren
test/core/number/num_float32/: acos.wren  asin.wren  atan.wren  atan2.wren  cbrt.wren  cos.wren  exp.wren  fraction.wren  largest.wren  log.wren  log2.wren  maxSafeInteger.wren  minSafeInteger.wren  minus.wren  mod.wren  multiply.wren  sin.wren  smallest.wren  sqrt.wren  to_string.wren  truncate.wren
test/core/range/num_float32/: iterate_from_float.wren  to_string.wren
test/language/conditional/num_float32/: precedence.wren
test/language/number/num_float32/: hex_literals.wren
test/limit/: too_many_constants.wren
util/: benchmark.py  metrics.py  metrics.txt  test.py  wren_to_c_string.py
